# customized-optimizers

./: .rooignore  README.md  pyproject.toml  requirements.txt  setup.py
customized_optimizers/: __init__.py  abmog.py  adam.py  came.py  fftdescent.py  oagopt.py  ocgopt.py  ocgoptv2.py  scgopt.py  simplifiedademamix.py  singstate.py  snoo_asgd.py  talon.py  utils.py
