[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customized-optimizers"
version = "1.1.11"
description = "Customized versions of existing optimizers."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "67372a", email = "117533205+67372a@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.4.1",
    "pytorch-optimizer==3.10.0",
    "adv-optm~=2.2.3",
    "bitsandbytes~=0.49.2",
]

[project.urls]
Homepage = "https://github.com/67372a/customized-optimizers"
Repository = "https://github.com/67372a/customized-optimizers"